--- a/ghostlist/public/css/ghostlist.css
+++ b/ghostlist/public/css/ghostlist.css
@@ -1356,16 +1356,39 @@ body {
 .allContent {
   margin: 0; }
 
-nav {
+nav.main {
   background-color: #f4f4f4;
-  border-bottom: 1px solid #d3d6d5;
+  border-bottom: 1px solid #d2d6d5;
   color: #a8abab;
   padding: 1em; }
+
+nav.direction {
+  text-align: center; }
+  nav.direction ul {
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #d2d6d5;
+    display: block; }
+    nav.direction ul li {
+      display: inline-block;
+      margin: 0;
+      padding: 0; }
+      nav.direction ul li a {
+        display: block;
+        text-decoration: none;
+        padding: 1.5em 2.5em;
+        color: #313131;
+        -webkit-transition: background .25s ease-out, color .25s ease-out;
+        transition: background .25s ease-out, color .25s ease-out; }
+      nav.direction ul li a:hover {
+        background-color: #f4f4f4; }
+      nav.direction ul li a.active {
+        font-weight: bold; }
 
 header {
   background-color: #e1e3e4;
   color: #a8abab;
-  border-bottom: 1px solid #d3d6d5; }
+  border-bottom: 1px solid #d2d6d5; }
 
 h1 {
   font-size: 3em;
@@ -1393,7 +1416,7 @@ ul#theBlog {
     ul#theBlog li article {
       padding-bottom: 2em;
       margin-bottom: 2em;
-      border-bottom: 1px solid #d3d6d5; }
+      border-bottom: 1px solid #d2d6d5; }
       ul#theBlog li article h2 {
         color: #3c948b;
         font-weight: normal;
