--- a/ghostlist/scss/ghostlist.scss
+++ b/ghostlist/scss/ghostlist.scss
@@ -12,7 +12,7 @@ $text-invert: #FFF;
 $background-primary: #e1e3e4;
 $background-secondary: #f4f4f4;
 $highlight:#3c948b;
-$border: #d3d6d5;
+$border: #d2d6d5;
 
 body {
   font: 1em $font-stack;
@@ -23,11 +23,40 @@ body {
 .allContent{
   margin: 0;
 }
-nav{
+nav.main{
     background-color:$background-secondary;
     border-bottom:1px solid $border;
     color: $text-light;
     padding: 1em;
+}
+nav.direction{
+    text-align: center;
+    ul{
+        margin: 0;
+        padding: 0;
+        border-bottom:1px solid $border;
+        display: block;
+        li{
+            display: inline-block;
+            margin: 0;
+            padding: 0;
+            a{
+                display: block;
+                text-decoration: none;
+                padding: 1.5em 2.5em;
+                color: $text-primary;
+                -webkit-transition: background .25s ease-out, color .25s ease-out;
+                transition: background .25s ease-out, color .25s ease-out;
+            }
+            a:hover{
+                background-color: $background-secondary;
+            }
+            a.active{
+                font-weight: bold;
+            }
+        }
+        
+    }
 }
 header{
     background-color:$background-primary;
