--- a/ghostlist/scss/ghostlist.scss
+++ b/ghostlist/scss/ghostlist.scss
@@ -29,7 +29,7 @@ nav.main{
     color: $text-light;
     padding: 1em;
 }
-nav.direction{
+nav.orientation{
     text-align: center;
     ul{
         margin: 0;
@@ -47,12 +47,12 @@ nav.direction{
                 color: $text-primary;
                 -webkit-transition: background .25s ease-out, color .25s ease-out;
                 transition: background .25s ease-out, color .25s ease-out;
-            }
-            a:hover{
-                background-color: $background-secondary;
-            }
-            a.active{
-                font-weight: bold;
+                &:hover{
+                    background-color: $background-secondary;
+                }
+                &.active{
+                    font-weight: bold;
+                }
             }
         }
         
@@ -76,23 +76,15 @@ ul#theBlog{
     padding: 0;
     li{
         list-style: none;
-        padding-left: $gutter-half;
-        padding-right: $gutter-half;
-        margin-top:2em;
         display: block;
         time{
-            @extend %desktop-grid-20;
-            @extend %mobile-grid-80;
             font-size: 0.9em;
             line-height:2em;
-            text-align:right;
             padding-right: 2em;
             font-style: italic;
             color: $highlight;
         }
         article{
-            @extend %desktop-grid-60;
-            @extend %mobile-grid-80;
             padding-bottom:2em;
             margin-bottom:2em;
             border-bottom:1px solid $border;
@@ -111,7 +103,46 @@ ul#theBlog{
             }
         }
     }
+     &.vertical {
+        li{
+            padding-left: $gutter-half;
+            padding-right: $gutter-half;
+            margin-top:2em;
+            time{
+                @extend %desktop-grid-20;
+                @extend %mobile-grid-80;
+                text-align:right;
+            }
+            article{
+                @extend %desktop-grid-60;
+                @extend %mobile-grid-80;
+            }
+        }
+    }&.horizontal{
+        overflow-x: scroll;
+        height:300px;
+        width:100%;
+        display:block;
+        white-space: nowrap;
+        border-bottom:1px solid $border;
+        li{
+            width:500px;
+            height:265px;
+            display: inline-block;
+            white-space: normal;
+            padding: 10px 20px;
+            vertical-align:top;
+            border-right:1px solid $border;
+            overflow-y: auto;
+            time, article{
+                @extend %desktop-grid-100;
+                @extend %mobile-grid-100;
+                border-bottom:none;
+            }
+        }
+    }
 }
+
 
 .blogPostTemplate{
     display:none;
